--- a/sample.html
+++ b/sample.html
@@ -4,7 +4,7 @@
 
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8"> 
-  <title> Tao Ran's Homepage </title>
+  <title> XX's Homepage </title>
 </head>
 <body>
 
